force-app/main/default/objects/numm__FATax__c/numm__FATax__c.object-meta.xml
<CustomObject>
    <description>Objet des taxes d&#39;immobilisations (Professionnelle,...)</description>
    <label>Taxe</label>
    <nameField>
        <label>Taxe</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Taxes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>