force-app/main/default/objects/numm__FATax__c/fields/numm__IsDefault__c.field-meta.xml
<CustomField>
    <fullName>numm__IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Defaut</label>
    <type>Checkbox</type>
</CustomField>