force-app/main/default/objects/numm__FATax__c/fields/numm__IsTaxPro__c.field-meta.xml
<CustomField>
    <fullName>numm__IsTaxPro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taxe Professionnelle</label>
    <type>Checkbox</type>
</CustomField>