force-app/main/default/objects/numm__FATax__c/fields/numm__Rate__c.field-meta.xml
<CustomField>
    <fullName>numm__Rate__c</fullName>
    <label>Taux</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>